#
# This file is distributed under the MIT License. See LICENSE.md for details.
#

revng_add_analyses_library_internal(
  revngCanonicalize
  EmbedStatementComments.cpp
  ExitSSAPass.cpp
  FoldModelGEP.cpp
  HoistStructPhis.cpp
  ImplicitModelCastPass.cpp
  LoopRewriteWithCanonicalIV.cpp
  MakeLocalVariables.cpp
  MakeModelCastPass.cpp
  MakeModelGEPPass.cpp
  OperatorPrecedenceResolutionPass.cpp
  PeepholeOptimizationPass.cpp
  PrettyIntFormattingPass.cpp
  RemoveBrokenDebugInformation.cpp
  RemoveConstantArrayReturnsPass.cpp
  RemoveLLVMAssumeCallsPass.cpp
  RemoveLoadStore.cpp
  RemovePointerCasts.cpp
  SimplifySwitchPass.cpp
  SplitOverflowIntrinsicsPass.cpp
  SwitchToStatements.cpp
  TernaryReductionPass.cpp
  TwosComplementArithmeticNormalizationPass.cpp)

target_link_libraries(
  revngCanonicalize
  revngInitModelTypes
  revngTypeNames
  revngSupport
  revngABI
  revngLocalVariables
  revngModel
  revngPipes
  revngPTML
  revngLift
  ${LLVM_LIBRARIES})
